fixed uneven project section

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,6 @@ body::-webkit-scrollbar-thumb{
   padding-top: 50px; 
   padding-bottom: 20px; 
   align-items: center;
-  margin: 5%; 
 }
 .subheading{
   text-align: center; 
